--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,56 @@ html
                                                          rgba(79,79,79,0.75));
 }
 
+.nav
+{
+    position: relative;
+    height: 100px;
+}
+
+.nav_container
+{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    z-index: 9998;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 120px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-transition: all 200ms ease;
+    transition: all 200ms ease;
+}
+
+.nav_left
+{
+    position: relative;
+    z-index: 9998;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    overflow: visible;
+    width: 100%;
+    max-width: 1200px;
+    padding-right: 2px;
+    padding-left: 20px;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
 li,ol,ul
 {
     list-style:none
@@ -42,13 +92,6 @@ a:hover
     margin:0 auto
 }
 
-.nav
-{
-    display:block;
-    border: 1px solid black;
-    margin-left: 0px;
-}
-
 .nav > li:last-child
 {
     float: right;
@@ -57,8 +100,6 @@ a:hover
 .nav .buttons
 {
     align-self: center;
-    /* width: 15%;
-    border: 1px solid black; */
 }
 
 .button {
@@ -93,4 +134,9 @@ a:hover
     background-color: #007EA7;
     border-radius: 5px;
     cursor: grabbing;
+}
+
+.weather
+{
+    width: 250px;
 }
