--- a/css/main.css
+++ b/css/main.css
@@ -12,106 +12,8 @@ html
 {
     font-family: 'Varela Round' !important;
     max-width: 100%;
-    min-height: 100%;
     background-size: cover;
-    /* background-color: #EFEFEF !important; */
     background-image: linear-gradient(to bottom right, rgba(239,239,239,0),
                                                          rgba(79,79,79,0.75));
-}
-
-.nav
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-}
-
-h1
-{
-    width: 100%;
-    text-align: center;
-}
-
-li,ol,ul
-{
-    list-style:none
-}
-
-.card {
-  background-color: white;
-  border-radius: 5px;
-  font-family: Verdana;
-  height: 15%;
-  margin: 2% auto;
-  padding: 2% 5%;
-  width: 80%;
-}
-
-a
-{
-    color:#4990d1;
-    text-decoration:none
-}
-
-a:hover
-{
-    text-decoration:underline
-}
-
-.center
-{
-    width:100%;
-    max-width:830px;
-    margin:0 auto
-}
-
-.nav > li:last-child
-{
-    float: right;
-}
-
-.nav .buttons
-{
-    align-self: center;
-}
-
-.button {
-    background-color: #00A7E1;
-    border: 2px solid #00A7E1;
-    color: #00171F;
-    margin-right: 10px;
-    padding: 10px 24px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 5px;
-    transition-duration: 0.2s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    outline: none;
-}
-
-.button:hover
-{
-    border: 2px solid #007EA7;
-    color: #00171F;
-    background-color: #00A7E1;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.button:active
-{
-    border: 2px solid #007EA7;
-    color: #00171F;
-    background-color: #007EA7;
-    border-radius: 5px;
-    cursor: grabbing;
-}
-
-.weather
-{
-    width: 250px;
+    background-repeat: no-repeat;
 }
