--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,14 @@ html
                                                          rgba(79,79,79,0.75));
     background-repeat: no-repeat;
 }
+
+#weather
+{
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+}
+
+#weather-data
+{
+    color: #e7ecef;
+}
